versioned_docs/version-1.6.0/references/commands/cli/configuration/epinio_configuration_update.md
---
title: ""
sidebar_label: "epinio configuration update"
---
## epinio configuration update

Update a configuration

### Synopsis

Update configuration by name and change instructions through flags.

```
epinio configuration update NAME [flags]
```

### Options

```
  -h, --help             help for update
  -r, --remove strings   configuration keys to remove
  -s, --set strings      configuration key/value assignments to add/modify
```

### Options inherited from parent commands

```
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --trace-level int          (TRACE_LEVEL) Only print trace messages at or above this level (0 to 255, default 0, print nothing)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio configuration](./epinio_configuration.md)	 - Epinio configuration features

